[project]
name = "pytide"
version = "0.3.2"
description = "Pytide: A tool for emailing high- and low-tide events."
readme = "README.md"
authors = [
    { name = "James Pfeifer", email = "pfeif@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "platformdirs>=4.5.1",
    "requests>=2.32.5",
]

[project.scripts]
pytide = "pytide.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
